--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>fit</groupId>
   <artifactId>java_fit</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>java_fit</name>
   <!-- FIXME change it to the project's website -->
